[package]
name = "zero-knowlegde-artificial-intel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.8"
pairing = "0.21"
rand = "0.8"
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"